demo/k8s-app-deployment/roles/k8s-cluster/files/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-passenger
  namespace: default
spec:
  selector:
    app: nginx-passenger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
