demo/k8s-app-deployment/roles/k8s-cluster/files/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-passenger-ingress
  namespace: default
spec:
  backend:
    serviceName: nginx-passenger
    servicePort: 80
